--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_circle"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.QuizApp"
@@ -15,7 +15,7 @@
             android:name=".ResultActivity"
             android:exported="false" />
         <activity
-            android:name=".PlayActivity"
+            android:name=".QuestionActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
